[package]
name = "tdc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tdc"
path = "main.rs"

[dependencies]
mac_address = "1.1"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
eframe = "0.29"
chrono = { version = "0.4", features = ["clock"] }
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
winres = "0.1"
